push dist folder because it is used by installers

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rest-admin",
   "version": "0.1.0",
   "private": true,
-  "main": "./dist/rest-admin.common.js",
+  "main": "./dist/rest-admin.umd.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build  --target lib --name rest-admin src/index.js",
